# chaplin

./: .env.example  README.md  chaplin.py  main.py  pyproject.toml
hydra_configs/: default.yaml
pipelines/: model.py
